# flash-attention

./: .gitignore  CMakeLists.txt  README.md
bench/: bench_attention.py  bench_cpp_plugin.py
src/: __init__.py  flash_attention.py
src/csrc/: attention_tiled.cpp  attention_tiled.h  attention_tiled_cuda.cu  attention_tiled_cuda.h  python_module.cpp
src/csrc/tests/: test_attention_tiled.cpp  test_attention_tiled_cuda.cpp  test_harness.cpp  test_harness.h  test_main.cpp
tests/: test_attention.py
